--- a/style1.css
+++ b/style1.css
@@ -94,6 +94,11 @@
 	 
 	}
 	
+	#blankSpace{
+		display: block;
+		height: 500px;
+	}
+	
 	div.middle {
 		
 		padding-top:50px;
@@ -118,7 +123,7 @@
 	}
 	#p1 {
 		font-family:Arial, Helvetica, sans-serif;
-		
+		float:left;
 		font-size:15px;
 	}
 	
