--- a/style1.css
+++ b/style1.css
@@ -26,8 +26,8 @@
 	height: 205px;
 	clear:right;
 	
-}	
-
+	}	
+	
 	div .menu {
 	clear:left;
 	display:inline-block;
@@ -40,6 +40,8 @@
 	
 	
 }
+
+
 	nav a {
 	 display: inline-block;
     background-color: rgb(67,70,75);
@@ -86,7 +88,8 @@
 	div.paraclass {
 	 display:inline-block;
 /* 	padding:150px 200px 200px 100px;  */
-	padding:5px
+	padding:5px;
+	
 	 margin:0px;
 	 background-color:#eeeeee;
 	 margin:0 Auto;
@@ -118,9 +121,23 @@
 	}
 	#p1 {
 		font-family:Arial, Helvetica, sans-serif;
-		
+		float:left;
 		font-size:15px;
 	}
+	
+	#blankspace{
+		
+		dispaly:block;
+		height:500px;
+	}
+	#email{
+		dispaly:block;
+		
+		padding-top:100px;
+		margin-left:300px;
+	}
+	
+	
 	
 	.mediaContainer audio{
 	
@@ -143,17 +160,11 @@
 		text-transform:uppercase;
 		font-size:15px;
 	} */
-	div .paraclass #ghlist{
+	div .paraclass #ghlist,#pwlist,#gtlist{
 		text-transform: capitalize;
+		
 		/*  product list page*/
 	}
 	
-	div .paraclass #pwlist{
-		text-transform: capitalize;
-		/*  product list page*/
-	}
-	div .paraclass #gtlist{
-		text-transform: capitalize;
-		/*  product list page*/
-	}
+	
 	
